# pyxle-langkit

./: .gitignore  CLAUDE.md  README.md  package.json  pyproject.toml
editors/vscode/: .vscodeignore  LICENSE  esbuild.js  language-configuration.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts  status.ts
editors/vscode/syntaxes/: pyx.tmLanguage.json  pyxl.tmLanguage.json
pyxle_langkit/: __init__.py  cli.py  completions.py  definitions.py  diagnostics.py  document.py  formatting.py  hover.py  linter.py  parser_adapter.py  react_checker.py  semantic_tokens.py  server.py  symbols.py  ts_bridge.py  workspace.py
pyxle_langkit/js/: jsx_component_extractor.mjs  ts_service.mjs
tests/: conftest.py  test_cli.py  test_completions.py  test_definitions.py  test_diagnostics.py  test_document.py  test_formatting.py  test_hover.py  test_linter.py  test_parser_adapter.py  test_react_checker.py  test_semantic_tokens.py  test_server.py  test_symbols.py  test_workspace.py
